--- a/views/create_blog.ejs
+++ b/views/create_blog.ejs
@@ -27,9 +27,12 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle">Profile <i class="fa-solid fa-circle-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/author">My Profile</a></li>
-                            <li><a href="/settings">Settings</a></li>
-                            <li><a href="#" id="logout-link">Logout</a></li>
+                            <%if(user){%>
+                                <li><a href="/author/<%=user?.id%>">My Profile</a></li>
+                                <li><a href="#" id="logout-link">Logout</a></li>
+                            <%}else{%>
+                                <li><a href="/login">Login</a></li>
+                            <%}%>
                         </ul>
                     </li>
                 </ul>
